# LangDeep

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: developer-guide.md
src/: __init__.py
src/core/: __init__.py  errors.py  logging.py
src/core/coordination/: __init__.py
src/core/decorators/: __init__.py  agent.py  model.py  provider.py  tool.py
src/core/execution/: __init__.py  execution_policy.py
src/core/orchestration/: __init__.py
src/core/orchestrator/: __init__.py  agent_node.py  aggregator.py  executor.py  orchestrator.py  planner.py  router.py
src/core/planner/: __init__.py  workflow_planner.py
src/core/prompt/: __init__.py  prompt_loader.py
src/core/registry/: __init__.py  agent_registry.py  model_registry.py  model_registry_backup.py  tool_registry.py
src/core/scheduling/: __init__.py  task_scheduler.py
src/resources/prompts/: aggregator.md  customer_service.md  dynamic_planner.md  planner.md  supervisor.md  web_research_system.md
src/schemas/: __init__.py
